Refactor some code, attempt to allow pinging roles for system messages